--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,11 @@ body {
 .App {
   background-color: #3f3160;
   min-height: 500px;
-  width: 400px;
+  width: 800px;
   margin: 40px auto;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
 #to-do-form input {
@@ -19,24 +22,5 @@ body {
   font-size: 18px;
   border-radius: 10px;
   color: white;
-}
 
-#to-do-form input::placeholder {
-  color: rgba(255, 255, 255, .5);
-}
-
-#to-do-form input:focus,
-#to-do-form button:focus {
-  outline: none;
-}
-
-#to-do-form button {
-  height: 50px;
-  width: 80px;
-  border-radius: 5px;
-  border: 0;
-  background-color: rgb(202, 156, 24);
-  cursor: pointer;
-  font-weight: bolder;
-  color: white;
 }
